--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,15 @@
-
+{
+  "short_name": "SMMD",
+  "name": "SMMD Comptabilité des maisons",
+  "icons": [
+    {
+      "src": "https://fav.farm/🏠",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#1e40af",
+  "background_color": "#ffffff"
+}
